   Print failure reason at runtime with QT_DEBUG_PLUGINS=1 in environment.

QtGui
-----

 - QTabBar: reduced minimumSizeHint if ElideMode is set.
 - QComboBox: Fixed a color propagation issue with the lineedit. [QTBUG-5950]

 QtOpenGL
 --------
 - Removed dependency of OpenGL Utility Library (GLU)
 - Added QGLFunctions, which provides cross-platform access to the
   OpenGL/ES 2.0 API.


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************

- Build System

- Assistant


- Designer


- Linguist
  - Linguist GUI

  - lupdate

  - lrelease


- rcc


- moc


- uic


- uic3


- qmake


- configure


- qtconfig


- qt3to4


****************************************************************************
*                          Plugins                                         *
****************************************************************************


****************************************************************************